	  get_error method.
	* Remove get_error implementation from all workers which use it.
	* Add Toolbox2Exception class and make all custom exceptions inherit
	  from this class.
	* Add _finalize method to worker API.
	* Add ffprobe worker.
	* Rename FFMpegWorker to FFmpegWorker.
	* Only sleep when required in Action._execute_worker.
	* Use ffmpeg-static instead of ffmpeg in ffmpeg worker.

Version 0.4.0 Released on 2012/01/16

	* Fix reading of stdout/stderr output in command module,
	  closes: #5458.
	* Remove read and timeout from Command.wait arguments.

Version 0.3.0 Released on 2012/01/09

	* Add a memory limit to command execution, refs: #5365.
	* Add callback method to action API, refs: #5365.
	* Call user action callback with progress information and
	  action information, closes: #5365.
	* Add videoparser_extract action, closes: #5365.
	* Fix duplicate stdout/stderr output returned by command.
	* Fix classes names of video_extract module.

Version 0.2.0 Released on 2011/11/22

	* Add _get_output_extension to action API, refs: #4588.
	* Let user specify output file extension in manzanita
	  rewrap action, closes: #4588

Version 0.1.1 Released on 2011/07/21

	* Replace _{add|get}_output_tmp_path with _{add|get}_output_path
	  in manzanita rewrap action, closes: #4495.

Version 0.1.0 Released on 2011/07/21

	* Initial release, closes: #4188.
	* Add support for kt-toolbox extract action, closes: #4234.
	* Add support for manzanita rewrap action, closes: #4239.
	* Fix module importation in action sub packages.
	* Do not manage output paths in toolbox2 actions, closes: #4253.
	* Add preexec_fn method to Command class.
	* Change output key from tmp_path to path and add infos setting.
	* Fetch STL files using kt-toolbox output in kttoolbox extract
	  action.
	* Support track_id_path setting in kttoolbox extract action.
	* Support basename option in kttoolbox worker.
	* Change settings namespace in kttoolbox extract action.