@@ -1,9 +1,9 @@
 python-toolbox2 (0.5.0~dev-1) unstable; urgency=low
 
-  * New upstream release.
+  * New upstream release, closes: #5545.
   * Raise dependency on ffmpeg-static (>= 0.10).
 
- -- Matthieu Bouron <matthieu.bouron@smartjog.com>  Thu, 02 Feb 2012 11:42:30 +0100
+ -- Matthieu Bouron <matthieu.bouron@smartjog.com>  Tue, 14 Feb 2012 18:49:13 +0100
 
 python-toolbox2 (0.4.0-1) unstable; urgency=low
 
